FIX: layout-content was not even with layout-main due to overflow-auto, layout-main should only expand vertically, this is true but now we have to deal with children expanding over the parents

--- a/web/src/css/styles/layout.scss
+++ b/web/src/css/styles/layout.scss
@@ -41,9 +41,9 @@
 }
 
 .layout-content {
-  @apply flex w-full flex-col overflow-auto px-4 pt-2;
+  @apply flex w-full flex-col px-4 pt-2;
 }
 
 .layout-main {
-  @apply flex h-full w-full flex-col justify-between overflow-auto;
+  @apply flex h-full w-full flex-col justify-between overflow-y-auto;
 }
